samples/_failures_safe/1761368591_29312f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ea741ad.c: In function ‘load_log_file’:
./samples/SAFE/__tmp_3ea741ad.c:125:9: error: expected declaration or statement at end of input
  125 |         line_number++;
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_3ea741ad.c:125:9: error: expected declaration or statement at end of input
